--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Zdravo</h1>
+<html>
+<body>
+<h1>My First Webpage</h1>
+<h3>Hi, my name is Henry and this is my first website.i am interested in: </h3>
+  <h3>*Web design</h3>
+  <h3>*Coding</h3>
+  <h3>Digital art</h3>
+</body>
+</html>
