--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <body>
 <h1>My First Webpage</h1>
 <h3>Hi, my name is Henry and this is my first website.i am interested in: </h3>
-  <h3>*Web design</h3>
-  <h3>*Coding</h3>
-  <h3>Digital art</h3>
+  <li>Web design</li>
+  <li>Coding</li>
+  <li>Digital art</li>\
+   <ol>bilo</ol>
+   <ol>sta</ol>
 </body>
 </html>
